# f407_CMake

./: .gitignore  CMakeLists.txt  F407_CMake.ioc  README.md
Core/Src/: main.c
